--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,10 @@
+:root {
+  --purple: #80a1d4;
+  --green: #092327;
+  --lightGreen: #0b5351;
+  --white: #efecca;
+  --yellow: #f7ff58;
+}
 * {
   text-align: center;
 }
@@ -7,9 +14,19 @@
   margin-bottom: 15px;
 }
 
-#main-day {
+#currentWeather {
   margin-top: 50px;
   justify-content: center;
   text-align: center;
   display: none;
+}
+
+body {
+  height: 100vh;
+  background: rgb(128, 161, 212);
+  background: linear-gradient(
+    0deg,
+    rgba(128, 161, 212, 1) 0%,
+    rgba(11, 83, 81, 1) 100%
+  );
 }
