--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,7 @@
   text-align: center;
 }
 
+
 #main-header {
   margin-top: 50px;
   margin-bottom: 15px;
@@ -18,6 +19,7 @@
   margin-top: 50px;
   justify-content: center;
   text-align: center;
+
 }
 
 body {
@@ -28,4 +30,9 @@ body {
     rgba(128, 161, 212, 1) 0%,
     rgba(11, 83, 81, 1) 100%
   );
+}
+
+#currentWeather {
+  text-align: center;
+  justify-content: center;
 }
