--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,12 @@
   margin-bottom: 15px;
 }
 
+.card-body,
+#forecast {
+  text-align: center;
+  justify-content: center;
+}
+
 #currentWeather {
   margin-top: 50px;
   justify-content: center;
