--- a/assets/style.css
+++ b/assets/style.css
@@ -13,10 +13,13 @@
   margin-bottom: 15px;
 }
 
-.card-body,
 #forecast {
   text-align: center;
   justify-content: center;
+}
+
+#date {
+  color: --purple;
 }
 
 #currentWeather {
